crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__transaction_nesting__test__begin_assume_transaction_err.snap
---
source: crates/squawk_linter/src/rules/transaction_nesting.rs
expression: "lint_errors_with(sql, settings)"
---
warning[transaction-nesting]: There is an existing transaction already in progress, managed by your migration tool.
  ╭▸ 
2 │ BEGIN;
  │ ━━━━━━
  │
  ╰ help: Put migration statements in separate files to have them be in separate transactions or don't use the assume-in-transaction setting.
warning[transaction-nesting]: There is an existing transaction already in progress, managed by your migration tool.
  ╭▸ 
3 │ BEGIN;
  │ ━━━━━━
  │
  ╰ help: Put migration statements in separate files to have them be in separate transactions or don't use the assume-in-transaction setting.
warning[transaction-nesting]: Attempting to end the transaction that is managed by your migration tool
  ╭▸ 
5 │ COMMIT;
  │ ━━━━━━━
  │
  ╰ help: Put migration statements in separate files to have them be in separate transactions or don't use the assume-in-transaction setting.
