crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__transaction_nesting__test__begin_repeated_err.snap
---
source: crates/squawk_linter/src/rules/transaction_nesting.rs
expression: "lint_errors(sql, Rule::TransactionNesting)"
---
warning[transaction-nesting]: There is an existing transaction already in progress.
  ╭▸ 
3 │ BEGIN;
  │ ━━━━━━
  │
  ╰ help: Put migration statements in separate files to have them be in separate transactions or don't use the assume-in-transaction setting.
