crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__transaction_nesting__test__commit_repeated_err.snap
---
source: crates/squawk_linter/src/rules/transaction_nesting.rs
expression: "lint_errors(sql, Rule::TransactionNesting)"
---
warning[transaction-nesting]: There is no transaction to `COMMIT` or `ROLLBACK`.
  ╭▸ 
5 │ COMMIT;
  │ ━━━━━━━
  │
  ╰ help: `BEGIN` a transaction at an earlier point in the migration or remove this statement.
