crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__transaction_nesting__test__rollback_with_assume_in_transaction_err.snap
---
source: crates/squawk_linter/src/rules/transaction_nesting.rs
expression: "lint_errors_with(sql, settings)"
---
warning[transaction-nesting]: Attempting to end the transaction that is managed by your migration tool
  ╭▸ 
4 │ ROLLBACK;
  │ ━━━━━━━━━
  │
  ╰ help: Put migration statements in separate files to have them be in separate transactions or don't use the assume-in-transaction setting.
