crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__transaction_nesting__test__squawk_enable_assume_in_transaction_flags_begin.snap
---
source: crates/squawk_linter/src/rules/transaction_nesting.rs
assertion_line: 195
expression: "lint_errors_with(sql, LinterSettings\n{ assume_in_transaction: false, ..Default::default() },)"
---
warning[transaction-nesting]: There is an existing transaction already in progress, managed by your migration tool.
  ╭▸ 
3 │ BEGIN;
  │ ━━━━━
  │
  ╰ help: Put migration statements in separate files to have them be in separate transactions or don't use the assume-in-transaction setting.
warning[transaction-nesting]: Attempting to end the transaction that is managed by your migration tool
  ╭▸ 
5 │ COMMIT;
  │ ━━━━━━
  │
  ╰ help: Put migration statements in separate files to have them be in separate transactions or don't use the assume-in-transaction setting.
